--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     outline: none;
     color: rgb(32, 24, 20);
     padding: 5px 5px;
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -12,7 +13,44 @@
     transition: 0.7s;
 }
 
+.label_1 {
+    background-color: #ffffff; /* Green */
+    border: none;
+    outline: none;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(32, 24, 20);
+    padding: 5px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    opacity: 1;
+    transition: 0.7s;
+}
+#result {
+    background-color: #ffffff; /* Green */
+    border: none;
+    outline: none;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(32, 24, 20);
+    padding: 5px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    opacity: 1;
+    transition: 0.7s;
+    width: 7%;
+}
+
 .bit_button:hover { 
     background-color: #afafaf;
     opacity: 1;
+}
+
+.main_panel {
+   display:flex;
+   justify-content: center;
+   align-items: center;
+   min-height: 100vh; 
 }
