--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,14 @@ body {
     border: none;
     outline: none;
     color: rgb(32, 24, 20);
-    padding: 5px 5px;
+    margin:0 auto;
+     padding-left: 0%; 
+     padding-right: 0%;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width: fit-content; 
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
@@ -23,27 +26,19 @@ body {
     outline: none;
     font-family: 'Courier New', Courier, monospace;
     color: rgb(32, 24, 20);
-    padding: 5px 5px;
-    text-align: center;
     text-decoration: none;
-     display: inline-block; 
+    text-align: center;
+    display: inline-block;
+    width: fit-content; 
+    margin:0 auto;
+    padding-left: 0%; 
+    padding-right: 0%;
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
 }
 #result {
-    background-color: #afafaf; /* Green */
-    border: none;
-    outline: none;
-    font-family: 'Courier New', Courier, monospace;
-    color: rgb(32, 24, 20);
-    padding: 5px 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block; 
-    font-size: 30px;
-    opacity: 1;
-    transition: 0.7s;
+
 }
 
 .bit_button:hover { 
@@ -65,7 +60,8 @@ body {
     width: 700px;
 }
 .bit_section {
-    width: 90%; 
+    width: 100%;
+    display: flex; 
 }
 
 .break {
@@ -74,32 +70,29 @@ body {
 }
 
 .hex_numbers {
-  width: 90%;
-  letter-spacing: 1.7rem;
-  text-align: center;
+  width: 100%;
+  letter-spacing: 0.5rem;
+  text-align: left;
   text-decoration: none;
-  display: inline-block; 
+  display: inline-block;
+  
 }
 
 .hex_label {
-    padding-left: 6%;
-    padding-right: 6%;
+
     background-color: #afafaf; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
     color: rgb(32, 24, 20);
-    text-align: center;
     text-decoration: none;
-     display: inline-block; 
+    display: inline-block; 
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
 }
 
 .oct_label {
-    padding-left: 6%;
-    padding-right: 6%;
     background-color: #afafaf; /* Green */
     border: none;
     outline: none;
@@ -111,4 +104,11 @@ body {
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
+}
+
+.hint {
+    padding-right: 6%;
+    display: inline-block;
+    font-style: italic;
+    letter-spacing: 0rem;
 }
