--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #afafaf;
+    background-color: #bebdbd;
 }
 
 .bit_button {
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     color: rgb(32, 24, 20);
@@ -22,7 +22,7 @@ body {
 }
 
 .label_1 {
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
@@ -82,7 +82,7 @@ body {
 
 .hex_label {
 
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
@@ -95,7 +95,7 @@ body {
 }
 
 .oct_label {
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
@@ -153,7 +153,7 @@ input {
 
 .task_string {
 
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
@@ -166,16 +166,46 @@ input {
 }
 
 .input_element {
-    background-color: #afafaf; /* Green */
+    background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
     color: rgb(32, 24, 20);
     text-decoration: none;
     display: inline-block; 
-    font-size: 30px;
+    font-size: 25px;
     opacity: 1;
     transition: 0.7s;
     letter-spacing: 0;
-    border-bottom: solid 1px #636363;
+    border-bottom: solid 1px #636363; 
+    min-width: 20%;
+    max-width: 20%;
+}
+
+.input_element:hover {
+    background-color:rgba(161, 212, 140, 1);
+    border-radius: 5px;
+}
+
+.bit_button_2 {
+    background-color: #bebdbd; /* Green */
+    border: none;
+    outline: none;
+    color: rgb(32, 24, 20);
+    margin:0 auto;
+    padding-left: 0%; 
+    padding-right: 0%;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: fit-content; 
+    font-size: 25px;
+    opacity: 1;
+    transition: 0.7s;
+    border-radius: 2px;
+}
+
+#task_panel {
+    opacity: 0.01;
 }
