--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ input {
     -moz-border-radius:50%;
     -webkit-border-radius:50%;
     width:50px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: sans-serif;
     text-align: left;
     align-items: center;
     text-decoration: none;
@@ -271,11 +271,12 @@ input {
     font-size: 30px;
     padding-bottom: 0;
     padding-top: 0;
-    margin-top:auto;
+    margin-top:1%;
     margin-bottom:auto;
     text-align:left;
     margin-left: auto;
-    margin-right: 3.5%
+    margin-right: 1%;
+    font-style: bold;
 }
 
 .row_upper {
