--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,39 @@
 body {
-    background-color: #bebdbd;
+    background-color: #945941;
+    background-image: linear-gradient(315deg, #945941 0%, #aa654a 74%);
+
+    margin: 0; height: 100%; overflow: hidden;
+    
+}
+
+.bg_image {
+    background-image: url(54466.jpg);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    position: static;
+    display: inline-block;
+    /* background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 
 .bit_button {
-    background-color: #bebdbd; /* Green */
+    /* background-color: #bebdbd;  */
+    background-color: #bebdbd;
     border: none;
     outline: none;
     color: rgb(32, 24, 20);
     margin:0 auto;
-    padding-left: 0%; 
+    padding-left: 0%;
     padding-right: 0%;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width: fit-content; 
+    width: fit-content;
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
@@ -25,14 +44,15 @@ body {
     background-color: #bebdbd; /* Green */
     border: none;
     outline: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Consolas", sans-serif;
+    font-family: 'Courier New', Courier, monospace; 
     color: rgb(32, 24, 20);
     text-decoration: none;
     text-align: center;
     display: inline-block;
-    width: fit-content; 
+    width: fit-content;
     margin:0 auto;
-    padding-left: 0%; 
+    padding-left: 0%;
     padding-right: 0%;
     font-size: 30px;
     opacity: 1;
@@ -42,25 +62,26 @@ body {
 
 }
 
-.bit_button:hover { 
+.bit_button:hover {
     background-color: #a0a0a0;
     opacity: 1;
 }
 
 .main_panel {
+    
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
-   align-items: center; 
+   align-items: center;
    min-height: 100vh;
-   flex-direction: column; 
+   flex-direction: column;
 }
 
 .row {
     display: flex;
     width: 700px;
     padding-top: 0.5%;
-    margin-top: 0;
+    margin-top: 1%;
     margin-bottom: 1%;
     margin-left: 3%;
     margin-right: 2em;
@@ -68,7 +89,7 @@ body {
 }
 .bit_section {
     width: 100%;
-    display: flex; 
+    display: flex;
 }
 
 .break {
@@ -77,12 +98,13 @@ body {
 }
 
 .hex_numbers {
+  font-family: "Consolas", monospace;
   width: 100%;
   letter-spacing: 0.25rem;
   text-align: left;
   text-decoration: none;
   display: inline-block;
-  
+
 }
 
 .hex_label {
@@ -93,7 +115,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     color: rgb(32, 24, 20);
     text-decoration: none;
-    display: inline-block; 
+    display: inline-block;
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
@@ -107,7 +129,7 @@ body {
     color: rgb(32, 24, 20);
     text-align: center;
     text-decoration: none;
-     display: inline-block; 
+     display: inline-block;
     font-size: 30px;
     opacity: 1;
     transition: 0.7s;
@@ -131,11 +153,17 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
-  
+
 }
 
 input {
     letter-spacing: 0.25em;
+    font-family: "Consolas", monospace;
+}
+
+input::placeholder{
+    color:rgba(0, 0, 0, 0.568);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.568);
 }
 
 .menu_button {
@@ -143,7 +171,7 @@ input {
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
     border: none;
-    outline: none; 
+    outline: none;
     text-align: left;
     border-radius: 5px;
     /* outline: solid 5px #FC5185;
@@ -157,37 +185,43 @@ input {
 }
 
 .task_string {
-
-    background-color: #bebdbd; /* Green */
+    letter-spacing: 0;
+    /* background-color: #bebdbd;  */
+    /* background-color: #a7a6a6; */
     border: none;
     outline: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Consolas";
+    /* font-family: 'Courier New', Courier, monospace; */
     color: rgb(32, 24, 20);
     text-decoration: none;
-    display: inline-block; 
+    display: inline-block;
     font-size: 20px;
     opacity: 1;
     transition: 0.7s;
 }
 
 .input_element {
-    background-color: #bebdbd; /* Green */
+    /* background-color: #bebdbd;  */
+    /* background-color: #a7a6a6; */
+    background-color: inherit;
+    background-attachment: fixed;
     border: none;
     outline: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "consolas", monospace;
     color: rgb(32, 24, 20);
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     text-decoration: none;
-    display: inline-block; 
+    display: inline-block;
     font-size: 25px;
     opacity: 1;
     transition: 0.7s;
     letter-spacing: 0;
-    border-bottom: solid 1px #636363; 
+    border-bottom: solid 1px #636363;
     min-width: 20%;
     max-width: 20%;
 }
+
 
 .input_element_correct {
     background-color:rgba(161, 212, 140, 1);
@@ -195,14 +229,13 @@ input {
     border-top-right-radius: 2px;
     border: none;
     outline: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "consolas", monospace;
     text-decoration: none;
-    display: inline-block; 
+    display: inline-block;
     font-size: 25px;
     opacity: 1;
     transition: 0.7s;
     letter-spacing: 0;
-    border-bottom: solid 1px #636363; 
     min-width: 20%;
     max-width: 20%;
 }
@@ -214,31 +247,33 @@ input {
     border-top-right-radius: 2px;
     border: none;
     outline: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "consolas", monospace;
     text-decoration: none;
-    display: inline-block; 
+    display: inline-block;
     font-size: 25px;
     opacity: 1;
     transition: 0.7s;
     letter-spacing: 0;
-    border-bottom: solid 1px #636363; 
+    border-bottom: solid 1px #636363;
     min-width: 20%;
     max-width: 20%;
 }
 
 .bit_button_2 {
-    background-color: #bebdbd; /* Green */
+    background-color: inherit;
+    /* background-color: #bebdbd; */
     border: none;
     outline: none;
     color: rgb(32, 24, 20);
     margin:0 auto;
-    padding-left: 0%; 
+    padding-left: 0%;
     padding-right: 0%;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Consolas", sans-serif;
+    /* font-family: 'Courier New', Courier, monospace; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width: fit-content; 
+    width: fit-content;
     font-size: 25px;
     opacity: 1;
     transition: 0.7s;
@@ -246,37 +281,46 @@ input {
 }
 
 #task_panel {
-    opacity: 0.01;
-    border: 2px solid black;
-    border-radius: 1%;
+    opacity: 0.00;
+    border: 1px solid black;
+    border-radius: 0.6%;
     margin: auto;
+    /* border-right: 4px solid black;  */
+    /* background-color: rgba(68, 150, 146, 70%); */
+    /* background-color: #a7a6a6; */
+    /* background-color: #ffffff; */
+background-image: linear-gradient(315deg, #417c94 0%, #4f93ad 74%);
 }
 
 .task_number {
-    background-color:#bebdbd;
-    border:2px solid black;    
+    /* background-color:#bebdbd;  */
+    background-color: inherit;
+    border:1px solid black;
     height:50px;
     border-radius:50%;
     -moz-border-radius:50%;
     -webkit-border-radius:50%;
     width:50px;
-    font-family: sans-serif;
-    text-align: left;
+    font-family: "consolas", monospace;
+    text-align: center;
     align-items: center;
     text-decoration: none;
     /* display: inline-block; */
     display: flex;
+    /* line-height: em(12); */
     align-items: center;
     justify-content: center;
     font-size: 30px;
     padding-bottom: 0;
     padding-top: 0;
-    margin-top:1%;
+    margin-top:0%;
     margin-bottom:auto;
-    text-align:left;
+    /* text-align:left; */
     margin-left: auto;
     margin-right: 1%;
     font-style: bold;
+
+    /* border-left: 4px solid black; */
 }
 
 .row_upper {
