--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ input::placeholder{
 
 #task_panel {
     opacity: 0.00;
-    border: 1px solid black;
+    border: 1px solid #72361e;
     border-radius: 0.6%;
     margin: auto;
     /* border-right: 4px solid black;  */
