--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #945941;
-    background-image: linear-gradient(315deg, #945941 0%, #aa654a 74%);
+    background-color: #bebdbd;
+    /* background-image: linear-gradient(315deg, #945941 0%, #aa654a 74%); */
 
     margin: 0; height: 100%; overflow: hidden;
     
@@ -310,8 +310,8 @@ input::placeholder{
     /* border-right: 4px solid black;  */
     /* background-color: rgba(68, 150, 146, 70%); */
     /* background-color: #a7a6a6; */
-    /* background-color: #ffffff; */
-background-image: linear-gradient(315deg, #417c94 0%, #4f93ad 74%);
+    background-color: #bebdbd;
+/* background-image: linear-gradient(315deg, #417c94 0%, #4f93ad 74%); */
 }
 
 .task_number {
